gestion du temps sur la map

--- a/templates/serveur/_formPosition.html.twig
+++ b/templates/serveur/_formPosition.html.twig
@@ -5,6 +5,7 @@
         <div class="col">
             {{ form_row(form.posX) }}
             {{ form_row(form.posY) }}
+            {{ form_row(form.duree) }}
             {{ form_row(form.alliance) }}
         </div>
         <div class="col">
