--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,12 +28,18 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="{{ path('app_serveur_index') }}">Serveur <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_alliance_index') }}">Alliances</a>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                configuration
+                            </a>
+                            <ul class="dropdown-menu">
+                                <a class="nav-link" href="{{ path('app_alliance_index') }}">Alliances</a>
+                                <a class="nav-link" href="{{ path('app_position_index') }}">Positions</a>
+{#                                <li><a class="dropdown-item" href="#">Something else here</a></li>#}
+                            </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_position_index') }}">Position</a>
-                        </li>
+
                     </ul>
                 </div>
             </nav>
