historisation des positions

--- a/templates/position/_form.html.twig
+++ b/templates/position/_form.html.twig
@@ -9,7 +9,7 @@
         </div>
         <div class="col">
             {{ form_rest(form) }}
-{#            <button class="btn btn-xs btn-success">{{ button_label|default('Mise à jour proprio') }}</button>#}
+            <button class="btn btn-xs btn-success">{{ button_label|default('ajout') }}</button>
         </div>
     </div>
 
