--- a/templates/serveur/_formPosition.html.twig
+++ b/templates/serveur/_formPosition.html.twig
@@ -3,14 +3,22 @@
     {{ form_errors(form) }}
     <div class="row">
         <div class="col">
+            <h3>Les infos</h3>
             {{ form_row(form.posX) }}
             {{ form_row(form.posY) }}
             {{ form_row(form.duree) }}
             {{ form_row(form.alliance) }}
         </div>
         <div class="col">
-            {{ form_rest(form) }}
+            <h3>Suivi de l'activité</h3>
+            {{ form_row(form.ajout) }}
+            {{ form_row(form.maj) }}
+            {{ form_row(form.suppr) }}
 {#            <button class="btn btn-xs btn-success">{{ button_label|default('Mise à jour proprio') }}</button>#}
+        </div>
+        <div class="col">
+            <h3>Stratégie</h3>
+            {{ form_rest(form) }}
         </div>
     </div>
 
