--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,6 +45,8 @@
                             <ul class="dropdown-menu">
                                 <a class="nav-link" href="{{ path('app_alliance_index') }}">Alliances</a>
                                 <a class="nav-link" href="{{ path('app_position_index') }}">Positions</a>
+                                <a class="nav-link" href="">Utilisateurs</a>
+{#                                <a class="nav-link" href="{{ path('app_user_index') }}">Users</a>#}
 {#                                <li><a class="dropdown-item" href="#">Something else here</a></li>#}
                             </ul>
                         </li>
@@ -63,7 +65,11 @@
             {% endfor %}
             {% endfor %}
 
-            {% block body %}{% endblock %}
+            {% block body %}
+                <div class="row">
+                    <h1>Bienvenue !</h1>
+                </div>
+            {% endblock %}
         </div>
     </body>
 </html>
