--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1>Enregistrement</h1>
 
     {{ form_errors(registrationForm) }}
 
@@ -14,6 +14,6 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-success">Inscrire</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
