--- a/templates/joueur/historique.html.twig
+++ b/templates/joueur/historique.html.twig
@@ -2,6 +2,17 @@
 
 {% block title %}Joueur{% endblock %}
 
+{% block javascripts %}
+    <!-- Load jQuery from Google's CDN if needed -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+    <script src="//code.highcharts.com/4.1.8/highcharts.js"></script>
+    <script src="//code.highcharts.com/4.1.8/modules/exporting.js"></script>
+    <script type="text/javascript">
+        {{ chart(chart) }}
+    </script>
+{% endblock %}
+
 {% block body %}
     <h1>Joueur</h1>
 {#{% set progression = joueur.getLastProgression %}#}
@@ -26,14 +37,18 @@
         </tbody>
     </table>
 
+
+
+    <div id="linechart" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+    <h3>Récapitulatif</h3>
     <table class="table">
         <thead>
-            <tr>
-                <td>Date</td>
-                <td>Tank</td>
-                <td>Avion</td>
-                <td>Missile</td>
-            </tr>
+        <tr>
+            <td>Date</td>
+            <td>Tank</td>
+            <td>Avion</td>
+            <td>Missile</td>
+        </tr>
         </thead>
         <tbody>
         {% for progression in joueur.progressions|reverse  %}
@@ -46,8 +61,6 @@
         {% endfor %}
         </tbody>
     </table>
-
-
 
     {% if is_granted('ROLE_OFFICIER') %}
         <a href="{{ path('app_joueur_index') }}" class="btn btn-primary">Retour à la liste</a>
