--- a/templates/joueur/historique.html.twig
+++ b/templates/joueur/historique.html.twig
@@ -3,12 +3,14 @@
 {% block title %}Joueur{% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
     <!-- Load jQuery from Google's CDN if needed -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
     <script src="//code.highcharts.com/4.1.8/highcharts.js"></script>
     <script src="//code.highcharts.com/4.1.8/modules/exporting.js"></script>
     <script type="text/javascript">
+
         {{ chart(chart) }}
     </script>
 {% endblock %}
